--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0px;
     padding: 0px;
+    overflow-x: hidden;
 }
 .navbar-toggler{
     font-size: 12px;
@@ -10,6 +11,11 @@ body{
 }
 .homepg-header{
     margin-top: 100px;
+}
+.discount-img{
+    position: relative;
+    bottom: 500px;
+    left: 400px;
 }
 .info{
     font-size: 60px;
@@ -31,4 +37,48 @@ body{
 }
 .contac-para-last{
     font-size: 12px;
+}
+.contact-img{
+    height: 20px;
+}
+@media only screen and (max-width: 767px){
+    .home-heading{
+        margin-left: 0px;
+    }
+    .homepg-header{
+        margin-top: 40px;
+    } 
+    .info{
+        font-size: 40px;
+    }
+    .discount-img{
+        position: relative;
+        bottom: 320px;
+        left: 220px;
+    }
+    .feature-txt{
+        text-align: center;
+    }
+    .card-margintop{
+        margin-top: 40px;
+    }
+    .row-padding{
+        padding: 20px;
+    }
+    .cart-img{
+        margin-left: 175px;
+    }
+   .msg-head{
+    font-size: 20px;
+    margin-left: 0px;
+   }
+   .msg-box{
+    margin-top: 20px;
+   }
+   .footer-size{
+    font-size: 8px;
+}
+.contact-img{
+    height: 10px;
+}
 }
